feat: add match amounts on screen

--- a/06-Type_Ahead/index.html
+++ b/06-Type_Ahead/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <form class="search-form">
+    <div class="amount"></div>
     <input type="text" class="search" placeholder="City or State">
       <ul class="suggestions">
         <li>Filter For A City</li>
