--- a/11-Custom_Video_Player/index.html
+++ b/11-Custom_Video_Player/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Video Player</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/a0f8735d0a.js" crossorigin="anonymous"></script>
   <link rel="icon" href="https://fav.farm/🔥" />
 </head>
 <body>
@@ -23,7 +24,7 @@
       <input type="range" name="playbackRate" class="player__slider" min="0.5" max="2" step="0.1" value="1">
       <button data-skip="-10" class="player__button">« 10s</button>
       <button data-skip="25" class="player__button">25s »</button>
-      <button class="player__button fullscreen" title="Toggle fullscreen">❐</button>
+      <button class="player__button fullscreen" title="Toggle fullscreen"><i class="fa-solid fa-expand"></i></button>
     </div>
   </div>
   <script src="index.js"></script>
