--- a/01-JavaScript_Drum_Kit/index.html
+++ b/01-JavaScript_Drum_Kit/index.html
@@ -48,15 +48,15 @@
     </div>
   </div>
 
-  <audio data-key="KeyA" src="/sounds/sounds_clap.wav"></audio>
-  <audio data-key="KeyS" src="/sounds/sounds_hihat.wav"></audio>
-  <audio data-key="KeyD" src="/sounds/sounds_kick.wav"></audio>
-  <audio data-key="KeyF" src="/sounds/sounds_openhat.wav"></audio>
-  <audio data-key="KeyG" src="/sounds/sounds_boom.wav"></audio>
-  <audio data-key="KeyH" src="/sounds/sounds_ride.wav"></audio>
-  <audio data-key="KeyJ" src="/sounds/sounds_snare.wav"></audio>
-  <audio data-key="KeyK" src="/sounds/sounds_tom.wav"></audio>
-  <audio data-key="KeyL" src="/sounds/sounds_tink.wav"></audio>
+  <audio data-key="KeyA" src="./sounds/sounds_clap.wav"></audio>
+  <audio data-key="KeyS" src="./sounds/sounds_hihat.wav"></audio>
+  <audio data-key="KeyD" src="./sounds/sounds_kick.wav"></audio>
+  <audio data-key="KeyF" src="./sounds/sounds_openhat.wav"></audio>
+  <audio data-key="KeyG" src="./sounds/sounds_boom.wav"></audio>
+  <audio data-key="KeyH" src="./sounds/sounds_ride.wav"></audio>
+  <audio data-key="KeyJ" src="./sounds/sounds_snare.wav"></audio>
+  <audio data-key="KeyK" src="./sounds/sounds_tom.wav"></audio>
+  <audio data-key="KeyL" src="./sounds/sounds_tink.wav"></audio>
 
   <script src="index.js"></script>
 </body>
